--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
         "lodash": "^4.17.19",
         "postcss": "^8.3.11",
         "tailwindcss": "^2.2.17",
-        "vue": "^2.6.14",
-        "vue-loader": "^15.9.8",
-        "vue-template-compiler": "^2.6.14"
+        "vue": "^3.2.20",
+        "vue-loader": "^16.8.1"
     }
 }
